tests/type_errors/requirements_in_apply.sy
type A q = { a: q }

def f : A Int -> Int : { a } = a

